# crumsort-wasm

./: Cargo.toml  crum-sort.wai  geometry.wai  wapm.toml
js/package/: package.json
js/package/src/: index.d.ts  index.js
js/package/src/bindings/: index.d.ts  index.js
js/package/src/bindings/crum-sort/: crum-sort.d.ts  crum-sort.js  intrinsics.js
python/: MANIFEST.in  pyproject.toml
python/crumsort_wasm/: __init__.py
python/crumsort_wasm/bindings/: __init__.py
python/crumsort_wasm/bindings/crum_sort/: bindings.py  crumsort-wasm.wasm
src/: lib.rs
