[package]
name = "crumsort-wasm"
description = "Crumsort from Google made for WASM"
version = "0.2.1"
edition = "2021"

[package.metadata.wapm]
namespace = "dynamite-bud"
abi = "none"
bindings = { wai-version = "0.2.0", exports = "crum-sort.wai" }

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
crumsort = "0.1.0"
wai-bindgen-rust = "0.2.3"
